--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation files('libs/tbs_sdk_thirdapp_v4.3.0.386_44286_sharewithdownloadwithfile_withoutGame_obfs_20230210_114429.jar')
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'com.google.code.gson:gson:2.8.9'                    //json文件转换
