--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:required="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
@@ -31,8 +32,9 @@
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true"
         tools:targetApi="33">
+
         <service
-            android:name="com.example.myapplication.MyService"
+            android:name=".MyService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
@@ -40,6 +42,15 @@
             </intent-filter>
         </service>
 
+        <service
+            android:name="com.tencent.smtt.export.external.DexClassLoaderProviderService"
+            android:label="dexopt"
+            android:process=":dexopt" >
+        </service>
+
+        <activity
+            android:name=".activity.WebViewX5Activity"
+            android:exported="false" />
         <activity
             android:name=".call.CallActivity"
             android:exported="false" />
